<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_movie_detail">Movie Detail</string>

    <string name="popularity">Popularity</string>
    <string name="release">Release</string>
    <string name="rated">Rated</string>
    <string name="revenue">Revenue</string>
    <string name="favourites">Favourites</string>

    <string name="please_wait">Please wait..</string>

    <string name="api_key"></string>
</resources>
